<resources>
    <string name="app_name">safeSoftApplication</string>
    <string name="strBtnLogin">Valider</string>
    <string name="strBtnInscription">Inscription</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"></string>
    <string name="strNom">Nom</string>
    <string name="strPrenom">Prénom</string>
    <string name="strPassword">Password</string>
    <string name="strEmail">Email</string>
    <string name="strDateNaissance">Date de naissance</string>
    <string name="strTelephone">Télephone</string>
    <string name="strAdresse">Adresse</string>
    <string name="strCodePostal">Code postal</string>
    <string name="title_activity_contact_client">ContactClientActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="strAdresseEmail">Adresse email</string>
    <string name="strLogin">Login</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Mon Compte</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_accueil">AccueilActivity</string>
    <string name="title_activity_accuei">AccueiActivity</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="menu_contacts">Contacts</string>
    <string name="menu_mesCommandes">Mes commandes</string>
    <string name="menu_monPanier">Mon panier</string>
    <string name="strEnregistrer">Enregistrer</string>
    <string name="strMotDePasse">Mot de passe</string>
    <string name="strNumeroDeTelephone">Numero de telephone</string>
    <string name="strGetAllQuery">SELECT * FROM clients</string>
    <string name="catalogue">Catalogue</string>
    <string name="commande">Commande</string>
    <string name="client">Client</string>
    <string name="organisme">Organisme</string>
    <string name="login">Login</string>
    <string name="login_info">Administrateur</string>
    <string name="action_info">Infos</string>
    <string name="sing_in">Sing-in</string>
    <string name="Titre">Titre :</string>
    <string name="categorie">Catégorie :</string>
    <string name="stock">Stock :</string>
    <string name="prix">Prix :</string>
    <string name="description">Déscriptoin :</string>
    <string name="Login_User">Adminidtrateur</string>
    <string name="Titre_produit">Titre du produit : </string>
    <string name="date_com">Date de commande : </string>
    <string name="date_exp">Date d\'expiration : </string>
    <string name="quantite">Quantité : </string>
    <string name="quantite_totale">Quantité totale : </string>
    <string name="modifier">Modifier</string>
    <string name="retour">Retour</string>
    <string name="accueil">Accueil</string>
    <string name="supprimer">Supprimer</string>
    <string name="reserver">Résérvations</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="cataloguevide">Catalogue vide</string>
    <string name="strMenuDeconnecter">Déconnecter</string>
    <string name="strItemDeconnexion">Déconnexion</string>
    <string name="strcommander">Commander</string>
    <string name="strsafesoft">SafeSoft</string>

</resources>