<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/catalogueFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/mesCommandesFragment"
            android:icon="@drawable/ic_commande"
            android:title="@string/menu_mesCommandes" />
        <item
            android:id="@+id/monCompteFragment"
            android:icon="@drawable/ic_compte"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/monPanierFragment"
            android:icon="@drawable/ic_panier"
            android:title="@string/menu_monPanier" />
        <item
            android:id="@+id/contactsFragment"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_contacts" />

    </group>
</menu>