<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.authentification.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">
            <!--                    android:text="@={viewModel.loginClient}"-->
            <EditText
                android:id="@+id/idLogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"

                android:hint="@string/strLogin"
                android:inputType="textPersonName" />
            <!--                android:text="@={viewModel.pswClient}"-->
            <EditText
                android:id="@+id/idPSW"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"

                android:hint="@string/strPassword"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/strBtnLogin" />

            <Button
                android:id="@+id/btnInscription"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/strBtnInscription" />
        </LinearLayout>

    </LinearLayout>
</layout>