<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>

        <variable
            name="produit"
            type="com.example.safesoftapplication.backend.api.bdLocal.entity.ProduitEntity" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_8sdp">

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/product_image"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/ic_checklist" />

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/titreProduitItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_20sdp"
                    android:text="@string/Titre" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/categorieProduitItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_15sdp"
                    android:text="@string/categorie"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:textSize="@dimen/_15sdp"
                    android:text="@string/prix"
                    />

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>



        </com.google.android.material.circularreveal.CircularRevealLinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>